--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"><meta/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"><meta/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta/>
-    <link rel="stylesheet" href="./style.css"><link/>
+    <meta charset="UTF-8"></meta>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+    <link rel="stylesheet" href="./style.css"></link>
     <title>HTML, CSS &amp; Git Basics</title>
   </head>
   <body>
