--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ function createCalculator(startValue) {
                 <img
                   src="./img/project_1.png"
                   alt="project-image"
-                  class="project-img"></img>
+                  class="project-img">
                 <a
                   href="https://pokhvalennaya.github.io/project_1/"
                   class="my-projects-list-item-link"
