--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>HTML, CSS &amp; Git Basics</title>
   </head>
   <body>
@@ -47,7 +47,7 @@
       <main class="main-block">
         <aside class="aside-block">
           <div class="image-block">
-            <img class="my-photo" src="./img/my-photo.jpg" alt="author-photo"></img>
+            <img class="my-photo" src="./img/my-photo.jpg" alt="author-photo" />
           </div>
           <div id="my-code">
             <h2 class="my-code-title">Code example</h2>
@@ -156,7 +156,8 @@ function createCalculator(startValue) {
                 <img
                   src="./img/project_1.png"
                   alt="project-image"
-                  class="project-img">
+                  class="project-img"
+                />
                 <a
                   href="https://pokhvalennaya.github.io/project_1/"
                   class="my-projects-list-item-link"
@@ -169,7 +170,8 @@ function createCalculator(startValue) {
                 <img
                   src="./img/project_2.png"
                   alt="project-image"
-                  class="project-img"></img>
+                  class="project-img"
+                />
                 <a
                   href="https://pokhvalennaya.github.io/project_2/"
                   class="my-projects-list-item-link"
@@ -195,7 +197,8 @@ function createCalculator(startValue) {
                 <img
                   src="./img/frontend-basic.png"
                   alt="certificate"
-                  class="certificate-img"></img>
+                  class="certificate-img"
+                />
                 <a
                   href="https://certificate.ithillel.ua/view/78479775"
                   class="certificate-link"
