--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <main class="main-block">
         <aside class="aside-block">
           <div class="image-block">
-            <img class="my-photo" src="./img/my-photo.jpg" alt="author-photo" />
+            <img class="my-photo" src="./img/my-photo.jpg" alt="author-photo">
           </div>
           <div id="my-code">
             <h2 class="my-code-title">Code example</h2>
@@ -158,7 +158,7 @@ function createCalculator(startValue) {
                   src="./img/project_1.png"
                   alt="project-image"
                   class="project-img"
-                />
+                >
                 <a
                   href="https://pokhvalennaya.github.io/project_1/"
                   class="my-projects-list-item-link"
@@ -172,7 +172,7 @@ function createCalculator(startValue) {
                   src="./img/project_2.png"
                   alt="project-image"
                   class="project-img"
-                />
+                >
                 <a
                   href="https://pokhvalennaya.github.io/project_2/"
                   class="my-projects-list-item-link"
@@ -189,7 +189,7 @@ function createCalculator(startValue) {
               Now I`m a 4th year student of the Kharkiv National University of
               Radioelectonics, specialty 172 telecommunications and
               radioengineering, educational program information and network
-              engineering. <br />Also I graduated from courses at Hillel IT
+              engineering. <br>Also I graduated from courses at Hillel IT
               School.
             </p>
             <ul class="my-courses-list">
@@ -199,7 +199,7 @@ function createCalculator(startValue) {
                   src="./img/frontend-basic.png"
                   alt="certificate"
                   class="certificate-img"
-                />
+                >
                 <a
                   href="https://certificate.ithillel.ua/view/78479775"
                   class="certificate-link"
@@ -214,7 +214,7 @@ function createCalculator(startValue) {
                   src="./img/frontend-pro.png"
                   alt="certificate"
                   class="certificate-img"
-                />
+                >
                 <a
                   href="https://certificate.ithillel.ua/view/94534675https://certificate.ithillel.ua/view/78479775"
                   class="certificate-link"
@@ -241,12 +241,12 @@ function createCalculator(startValue) {
               class="contact-list-item-link"
               target="_blank"
               ><img src="./img/gh-logo.png" alt="github-logotype"
-            /></a>
+            ></a>
           </li>
           <li class="contact-list-item">
             <a href="https://rs.school/js/" class="logo-link" target="_blank"
               ><img src="./img/rs-school-logo.png" alt="rs-school-logotype"
-            /></a>
+            ></a>
           </li>
           <li class="contact-list-item">
             <p class="created-year">Created in 2022</p>
