refactor: update infomation

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <main class="main-block">
         <aside class="aside-block">
           <div class="image-block">
-            <img class="my-photo" src="./img/my-photo.jpg" alt="author-photo">
+            <img class="my-photo" src="./img/me.jpg" alt="author-photo">
           </div>
           <div id="my-code">
             <h2 class="my-code-title">Code example</h2>
@@ -75,7 +75,7 @@ function createCalculator(startValue) {
         <div class="info-block">
           <div id="about-me">
             <h2 class="about-me-title">About me</h2>
-            <p class="about-me-info">My name is Lena and I`m 20 years old. I`m from Kharkov and now I`m a student of KhNURE. I do not have work experience, but I want to become a professional developer. I have such qualities as responsibility, purposefulness, friendliness, I like to learn</p>
+            <p class="about-me-info">My name is Lena and I`m 21 years old. I am from Kharkiv, and now I live in the Sumy region. I graduated from Kharkiv National University of Radioelectonics. My bachelor's qualification work was the development of a website based on the MERN technology stack, in which all 4 technologies are based on the JavaScript programming language. And it was my work experience, but I want to become a professional developer. I have such qualities as responsibility, purposefulness, friendliness, and also I love learning and developing new professional skills.</p>
           </div>
           <div id="contact-me">
             <h2 class="contact-me-title">Contact me</h2>
@@ -102,10 +102,13 @@ function createCalculator(startValue) {
             <ul class="my-skills-list">
               <li class="my-skills-list-item html">HTML</li>
               <li class="my-skills-list-item css">CSS</li>
-              <li class="my-skills-list-item js">JavaScript (basic knowledge and skills)</li>
-              <li class="my-skills-list-item node">Node.js (basic)</li>
+              <li class="my-skills-list-item js">JavaScript</li>
+              <li class="my-skills-list-item node">Node.js</li>
               <li class="my-skills-list-item react">React</li>
-              <li class="my-skills-list-item type">TypeScript (basic)</li>
+              <li class="my-skills-list-item type">TypeScript</li>
+              <li class="my-skills-list-item mongo">MongoDB</li>
+              <li class="my-skills-list-item express">Express</li>
+
             </ul>
           </div>
           <div id="my-projects">
@@ -123,7 +126,7 @@ function createCalculator(startValue) {
           </div>
           <div id="my-education">
             <h2 class="my-education-title">My education</h2>
-            <p class="my-education-info">Now I`m a 4th year student of the Kharkiv National University of Radioelectonics, specialty 172 telecommunications and radioengineering, educational program information and network engineering. <br>Also I graduated from courses at Hillel IT School.</p>
+            <p class="my-education-info">I graduated from Kharkiv National University of Radioelectonics, specialty 172 telecommunications and radioengineering, educational program information and network engineering. <br>Also I graduated from courses at Hillel IT School.</p>
             <ul class="my-courses-list">
               <li class="my-courses-list-item">
                 <p class="courses-list-info">Front End Basic</p>
@@ -154,7 +157,7 @@ function createCalculator(startValue) {
             <a href="https://rs.school/js/" class="logo-link" target="_blank"><img src="./img/rs-school-logo.png" alt="rs-school-logotype"></a>
           </li>
           <li class="contact-list-item">
-            <p class="created-year">Created in 2022</p>
+            <p class="created-year">Created in 2023</p>
           </li>
         </ul>
       </footer>
